Re-add functionality that was lost in previous commit to close context menu when window is resized or user clicks outside of menu
Signed-off-by: Gabriel Keenleyside <gabrielkeenleyside@Gabriels-MBP.Home>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.css
@@ -97,8 +97,13 @@
   border-bottom: none;
 }
 
+.menuitem-content {
+  display: flex;
+}
+
 .icon {
   width: 19px;
+  height: 19px;
   margin-right: 5px;
   background-size: contain;
 }
@@ -109,6 +114,12 @@
 
 .icon-settings {
   background-image: url(../../../../assets/images/contextmenu/settings.png);
+}
+
+.shortcut {
+  margin-left: 15px;
+  right: 5px;
+  font-weight: bold;
 }
 
 /*
