Fix menu positioning issues arising from spawning context menu via spawnContextMenu() rather than Window Manager
Signed-off-by: Gabriel Keenleyside <gabrielkeenleyside@Gabriels-MBP.Home>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.css
@@ -87,9 +87,9 @@
   z-index: 1;
 }
 
-.context-menu .multi-menu-item>.submenu>com-rs-mvd-context-menu {
-  margin: -10px;
-  padding: 10px;
+.context-menu .multi-menu-item>.submenu>com-rs-mvd-context-menu>.context-menu {
+  left: 0;
+  top: 0;
 }
 
 
