Prevent disabled menu items from closing menu when clicked, and allow individual menu items to control whether clicking them causes the menu to close
Signed-off-by: Gabriel Keenleyside <gabrielkeenleyside@Gabriels-MBP.Home>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.html
@@ -29,7 +29,7 @@
           [class.top]="i==0"
           [class.bottom]="i==menuItems.length-1"
           [class.disabled]="menuItem.disabled"
-          (click)='itemClicked(menuItem); $event.stopPropagation(); closeContextMenu()'
+          (click)='itemClicked(menuItem); $event.stopPropagation();'
           (mouseover)="this.activeIndex=i; makeNavigable(); $event.stopPropagation();"
         >
         <div
@@ -51,7 +51,7 @@
           [class.top]="i==0"
           [class.bottom]="i==menuItems.length-1"
           [class.disabled]="menuItem.disabled"
-          (click)='itemClicked(menuItem); $event.stopPropagation(); closeContextMenu()'
+          (click)='itemClicked(menuItem); $event.stopPropagation();'
           (mouseover)="this.activeIndex=i; makeNavigable(); $event.stopPropagation();"
         >
           <div
