--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.css
@@ -45,7 +45,7 @@ li.disabled {
   list-style: none;
   padding: 0;
   margin: 0;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .context-menu .menu-item {
