Allow context menu item shortcuts to include modifiers, and prevent default behavior of these key+modifer(s)
Signed-off-by: Gabriel Keenleyside <gabrielkeenleyside@Gabriels-MBP.Home>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.html
@@ -39,7 +39,9 @@
               <div class="icon {{menuItem.icon}}"></div>
               <div>{{menuItem.text}}</div>
             </div>
-            <div class="shortcut">{{menuItem.shortcut}}</div>
+            <div class="shortcut">
+              {{this.computeShortcutString(menuItem)}}
+            </div>
           </div>
         </li>
       </ng-template>
