--- a/virtual-desktop/src/assets/css/desktop.css
+++ b/virtual-desktop/src/assets/css/desktop.css
@@ -19,6 +19,8 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
+  width:100%;
+  height:100%;
 }
 
 .desktop {
