Generate context menu item icon images from Base64 string references rather than from stylesheet
Signed-off-by: Gabriel Keenleyside <gabrielkeenleyside@Gabriels-MBP.Home>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.css
@@ -135,18 +135,14 @@ li.disabled {
   margin-left: 25px;
 }
 
-.icon-person {
-  background-image: url(../../../../assets/images/contextmenu/person.png);
-}
-
-.icon-settings {
-  background-image: url(../../../../assets/images/contextmenu/settings.png);
-}
-
 .shortcut {
   margin-left: 15px;
   right: 5px;
   font-weight: bold;
+}
+
+.hide-icon {
+  display: none;
 }
 
 /*
