Code smells correction - commented out code removal
Signed-off-by: JP Linardon <jlinardon@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-instance-view/launchbar-instance-view.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-instance-view/launchbar-instance-view.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="instance-snapshot" (click)="clicked(windowId)" [style.background-color]="black">
         <img class="instance-preview" src={{getPreview(i,launchbarItem)}}/>
-      </div> <!-- [style.background-image]="wherever this comes from" -->
+      </div>
     </div>
   </div>
   <p class="caption label-caption truncate">{{launchbarItem.label}}</p>
