--- a/virtual-desktop/src/app/authentication-manager/login/login.component.css
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.css
@@ -149,6 +149,12 @@
   font-size: 12pt;
 }
 
+.login-message {
+  text-align: center;
+  background-color: lightgoldenrodyellow;
+  border-radius: 5px;
+}
+
 /*
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
