--- a/virtual-desktop/src/app/authentication-manager/login/login.component.html
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.html
@@ -19,25 +19,39 @@
   <div>
     <img [src]="logo" alt="Zowe - z/OS Lightweight User Experience" />
     <form class="login-form" [hidden]="!needLogin">
+      <p class="login-message">{{loginMessage}}</p>
       <label for="userid" i18n="label|Label for username@@username-label">Username</label>
       <input class="userid" id="usernameInput" aria-labelledby="user id" tabindex="1" type="text" name="userid" [(ngModel)]="username" minlength="1" maxlength="100" autofocus [attr.disabled]="locked?'':null" (keyup)="considerSubmit($event)"/>
-      <label for="password" i18n="label|Label for password@@password-label">Password</label>
+      <label for="password" i18n="label|Label for password@@password-label">{{this.expiredPassword ? "Old Password" : "Password"}}</label>
       <input class="password" id="passwordInput" aria-labelledby="password" tabindex="1" type="password" name="password"[(ngModel)]="password" maxlength="100" [attr.disabled]="locked?'':null" (keyup)="considerSubmit($event)"/>
+      <label [hidden]="!expiredPassword" for="newPassword" i18n="label|Label for password@@password-label">New Password</label>
+      <input [hidden]="!expiredPassword" class="newPassword" id="newPasswordInput" aria-labelledby="newPassword" tabindex="1" type="password" name="newPassword"[(ngModel)]="newPassword" maxlength="100" [attr.disabled]="locked?'':null" (keyup)="considerSubmit($event)"/>
     </form>
     <p class="login-error">{{errorMessage || "&nbsp;"}}</p>
-    <p class="login-message">{{loginMessage || "&nbsp;"}}</p>
     <div class="fa fa-spinner fa-spin fa-5x" [hidden]="!isLoading"></div>
-    <button id="#loginButton"
-            class="login-button"
-            (click)="attemptLogin()"
-            [hidden]="!needLogin"
-            [disabled]="locked">
-      <span class="login-button-icon"></span>
-      <br>
-      <span class="login-label" i18n="button title|Title of Login button@@login-button-title">Log in</span>
-      <br><br>
-      <span class="login-plugin-version">{{getPluginVersion()}}</span>
-    </button>
+    <div>
+      <button id="#loginButton"
+        class="login-button"
+        (click)="cancelPasswordReset()"
+        [hidden]="!expiredPassword"
+        [disabled]="locked">
+        <span class="login-button-icon"></span>
+        <br>
+        <span class="login-label" i18n="button title|Title of Login button@@login-button-title">Cancel</span>
+        <br><br>
+      </button>
+      <button id="#loginButton"
+        class="login-button"
+        (click)="loginMiddleman()"
+        [hidden]="!needLogin"
+        [disabled]="locked">
+        <span class="login-button-icon"></span>
+        <br>
+        <span class="login-label" i18n="button title|Title of Login button@@login-button-title">Log in</span>
+        <br><br>
+      </button>
+    </div>
+    <span class="login-plugin-version">{{getPluginVersion()}}</span>
   </div>
   </div>
 </div>
