Web Browser App: More work on Proxy Service
Signed-off-by: Leonty Chudinov <lchudinov@rocketsoftware.com>

--- a/system-apps/web-browser-app/webClient/src/app/browser/browser-window/browser-window.component.html
+++ b/system-apps/web-browser-app/webClient/src/app/browser/browser-window/browser-window.component.html
@@ -10,6 +10,7 @@
 
 <iframe *ngIf="url$ | async else startPage" [src]="url$ | async"></iframe>
 <ng-template #startPage>
+  Welcome to Zowe Web Browser
 </ng-template>
 
 <!--
