UI changes for login/password-reset
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/desktop/desktop.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/desktop/desktop.component.html
@@ -15,7 +15,7 @@
 </ng-container>
 
 <rs-com-window-pane></rs-com-window-pane>
-<rs-com-launchbar></rs-com-launchbar>
+<rs-com-launchbar [hidden]="checkLaunchbarVisibility()"></rs-com-launchbar>
 <rs-com-personalization-panel *ngIf="isPersonalizationPanelVisible"></rs-com-personalization-panel>
 
 <!-- 
