Fix for sub-menus in right click menu go off screen vertically. Also, add menu ability to single app mode
Signed-off-by: 1000TurquoisePogs <sgrady@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/context-menu/context-menu.component.css
@@ -75,7 +75,7 @@ li.disabled {
   border-left: 5px solid #666;
 }
 
-.context-menu .multi-menu-item .menu-expand-caret.propagateChildLeft {
+.context-menu .multi-menu-item.propagateChildLeft {
   left: 5px;
   margin: auto;
   margin-left: 0;
