Web Browser App: Improve UI
Signed-off-by: Leonty Chudinov <lchudinov@rocketsoftware.com>

--- a/system-apps/web-browser-app/webClient/src/app/browser/address-bar/address-bar.component.scss
+++ b/system-apps/web-browser-app/webClient/src/app/browser/address-bar/address-bar.component.scss
@@ -11,12 +11,26 @@
 :host {
   flex: 0 0 auto;
   display: flex;
+  align-items: center;
+  overflow: hidden;
 }
 
-input {
+input[type="url"] {
   flex: 1 1 auto;
 }
 
+button {
+  flex: 0 0 3rem;
+}
+
+.proxy {
+  flex: 0 0 auto;
+  width: 4rem;
+  display: flex;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
 /*
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
