--- a/system-apps/web-browser-app/webClient/src/app/browser/address-bar/address-bar.component.html
+++ b/system-apps/web-browser-app/webClient/src/app/browser/address-bar/address-bar.component.html
@@ -7,9 +7,15 @@
 
   Copyright Contributors to the Zowe Project.
 -->
-
+<button>&larr;</button>
+<button>&rarr;</button>
+<button>&#8634;</button>
 <input type="url" [formControl]="url" [placeholder]="placeholder" (keyup.enter)="navigate()">
-
+<button>Go</button>
+<div class="proxy">
+  <label for="proxy">Proxy</label>
+  <input name="proxy" type="checkbox" [formControl]="proxy">
+</div>
 <!--
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
