--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/window-pane/window-pane.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/window-pane/window-pane.component.html
@@ -12,7 +12,7 @@
 
 <div class="window-pane" [ngStyle]="wallpaper">
   <div *ngFor="let window of windows">
-    <rs-com-mvd-window [desktopWindow]="window"></rs-com-mvd-window>
+    <rs-com-mvd-window [desktopWindow]="window" [theme]="theme"></rs-com-mvd-window>
   </div>
 </div>
 
