--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.css
@@ -17,10 +17,21 @@
   background-image: url("../../../../../assets/images/launchbar/more-apps.png");
 }
 
+.app-label {
+    display: inherit;
+}
+
 .launch-menu-search {
   position:absolute;
   bottom: 5px;
   width: 100%;
+}
+
+.launch-menu-search-input {
+  width: 95%;
+  background-color: #ffffff55;
+  border: 0;
+  border-radius: 4px;
 }
 
 .launch-menu-scroller {
@@ -38,10 +49,11 @@
 
 .launch-widget {
   height: 100%;
-  width: 125px;
   text-align: center;
   display: inline-block;
   position: absolute;
+  padding-left: 5px;
+  padding-right: 10px;
   left: 0;
   bottom: 0;
   z-index: 7;
@@ -49,10 +61,10 @@
 
 .icon {
   box-sizing: border-box;
-  margin: 0;
+  margin: 5px 10px 5px 0px;
   padding: 0;
-  position: absolute;
   background: transparent;
+  background-size: 100%;
 }
 
 .launch-widget-row-settings p {
@@ -63,10 +75,10 @@
 
 .launch-widget-row {
   list-style: none;
-  height: 60px;
   margin: 0px 5px;
   text-align: left;
   cursor: pointer;
+  display: flex;
 }
 
 .launch-widget-row .icon {
@@ -84,7 +96,7 @@
   height: 350px;
   position: absolute;
   bottom: 90px;
-  left: 10px;
+  left: 5px;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   border-top-left-radius: 10px;
