--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
@@ -9,28 +9,46 @@
 -->
 
 <div class="launch-widget">
-  <div class="mvd-launchbar-icon mvd-launchbar-icon-large launchbar-menu-icon" (click)="activeToggle()"></div>
+  <div class="mvd-launchbar-icon mvd-launchbar-icon-large launchbar-menu-icon"
+       [style.width]="menuIconSize"
+       [style.height]="menuIconSize"
+       (click)="activeToggle()"></div>
   <div class="launchbar-separator right"></div>
 </div>
 
 <ng-template [ngIf]="isActive">
-  <div class="launch-widget-popup">
+  <div class="launch-widget-popup"
+       [style.background]="color.launchbarMenuColor"
+       [style.color]="color.launchbarMenuText"
+       [style.width]="menuWidth"
+       [style.bottom]="menuBottom">
     <div style="cursor: pointer" class="refresh-plugins" (click)="refresh()">
       Refresh applications
       <i style="padding: 5px" class="fa fa-refresh" (click)="refresh()"></i>
     </div>
     <div style="margin: 20px"></div>
-    <div class="launch-menu-scroller">
+    <div class="launch-menu-scroller"
+         [style.background]="color.launchbarMenuColor"
+         [style.width]="menuWidthInner"
+         [style.color]="color.launchbarMenuText">
       <div class="launch-widget-row" *ngFor="let item of displayItems" (click)="clicked(item)" [title]="item.tooltip" (contextmenu)="onRightClick($event, item)">
-        <img class="icon" [src]="item.image">
-        <p>{{item.label}}</p>
+        <div class="icon"
+             [style.width]="appIconSize"
+             [style.height]="appIconSize"
+             [style.background-image]="'url('+item.image+')'"></div>
+        <div class="app-label"
+             [style.padding-top]="appLabelPadding"
+             [style.font-size]="menuText">{{item.label}}</div>
       </div>
     </div>
     <div class="launch-menu-search">
-      <input style="width:95%" type="text" placeholder="Search Applications" [(ngModel)]="appFilter" (input)="filterMenuItems()">
+      <input class="launch-menu-search-input" type="text" placeholder="Search Applications"
+             [style.font-size]="menuText"
+             [style.color]="color.launchbarMenuText"
+             [(ngModel)]="appFilter"
+             (input)="filterMenuItems()">
     </div>
   </div>
-  <div class="launch-widget-caret caret-down"></div>
 </ng-template>
 
 <!-- 
