Web Browser App: Make Refresh and Go buttons work
Signed-off-by: Leonty Chudinov <lchudinov@rocketsoftware.com>

--- a/system-apps/web-browser-app/webClient/src/app/browser/address-bar/address-bar.component.html
+++ b/system-apps/web-browser-app/webClient/src/app/browser/address-bar/address-bar.component.html
@@ -7,11 +7,11 @@
 
   Copyright Contributors to the Zowe Project.
 -->
-<button>&larr;</button>
-<button>&rarr;</button>
-<button>&#8634;</button>
+<button (click)="back()">&larr;</button>
+<button (click)="forward()">&rarr;</button>
+<button (click)="refresh()">&#8634;</button>
 <input type="url" [formControl]="urlControl" [placeholder]="placeholder" (keyup.enter)="navigate()">
-<button>Go</button>
+<button (click)="navigate()">Go</button>
 <div class="proxy">
   <label for="proxy">Proxy</label>
   <input name="proxy" type="checkbox" [formControl]="proxyControl">
