Web Browser App: Make Back/Forward buttons work
Signed-off-by: Leonty Chudinov <lchudinov@rocketsoftware.com>

--- a/system-apps/web-browser-app/webClient/src/app/browser/address-bar/address-bar.component.html
+++ b/system-apps/web-browser-app/webClient/src/app/browser/address-bar/address-bar.component.html
@@ -7,8 +7,8 @@
 
   Copyright Contributors to the Zowe Project.
 -->
-<button (click)="back()">&larr;</button>
-<button (click)="forward()">&rarr;</button>
+<button (click)="goBack()">&larr;</button>
+<button (click)="goForward()">&rarr;</button>
 <button (click)="refresh()">&#8634;</button>
 <input type="url" [formControl]="urlControl" [placeholder]="placeholder" (keyup.enter)="navigate()">
 <button (click)="navigate()">Go</button>
