--- a/system-apps/web-browser-app/webClient/src/app/browser/address-bar/address-bar.component.scss
+++ b/system-apps/web-browser-app/webClient/src/app/browser/address-bar/address-bar.component.scss
@@ -23,13 +23,21 @@ button {
   flex: 0 0 3rem;
 }
 
+.icon-button {
+  font-weight: 600;
+}
+
 .proxy {
   flex: 0 0 auto;
-  width: 4rem;
-  display: flex;
+  width: 6rem;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  padding: 0 0.5rem;
+  
+  label {
+    margin: 0;
+  }
 }
 /*
   This program and the accompanying materials are
