--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
@@ -10,29 +10,34 @@
   Copyright Contributors to the Zowe Project.
 */
 
-.launchbar-clock {
+.clock {
+  float: right;
+}
+
+.two-row {
+  line-height: 1;
+}
+
+.widget-area {
   float: right;
   position: absolute;
   bottom: 0;
   right: 0;
   width: fit-content;
-  min-width: 210px; /* fit-content seems to fail at times with Safari, min-width here as a safety */
+  min-width: 175px; /* fit-content seems to fail at times with Safari, min-width here as a safety */
   height: 100%;
   z-index: 7;
   color: #eee;
-  padding-left: 18px;
-  padding-top: 16px;
+  padding-left: 12px;
   padding-right: 10px;
   text-align: right;
+  display: block;
 }
 
 .launchbar-tray-icon {
   float: left;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background: #dde8f1;
-  margin-top: -16px;
+  width: 32px;
+  height: 32px;
   margin-right: 7px;
   background-size: 32px 32px;
   background-repeat: no-repeat;
@@ -42,18 +47,15 @@
 
 .launchbar-tray-icon.user {
   background-image: url('../../../../../assets/images/launchbar/person.png');
-  background-size: 26px 26px;
-  margin-right: 18px;
+  margin-right: 12px;
 }
 
 .launchbar-tray-icon.settings {
   background-image: url('../../../../../assets/images/launchbar/settings.png');
-  background-size: 30px 30px;
 }
 
 .launchbar-tray-icon.notification {
   background-image: url('../../../../../assets/images/launchbar/notifications/notification.png');
-  background-size: 26px 26px;
 }
 
 .launchbar-user:hover {
